# Market-Regime-Detector

./: README.md  app.py  data_utils.py  eda_utils.py  model_utils.py  pyproject.toml  quant_utils.py  regime_viz_utils.py  requirements.txt  ui_utils.py  vercel.json
.streamlit/: config.toml
api/: index.py
