[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "market-regime-detector"
version = "0.1.0"
description = "Market Regime Detection using K-means and regime analysis"
requires-python = ">=3.9"
dependencies = [
    "streamlit>=1.28.0",
    "pandas>=1.5.0",
    "plotly>=5.0.0",
    "scikit-learn>=1.0.0",
    "fastapi>=0.100.0",
    "uvicorn>=0.23.0",
]

[tool.streamlit]
client.showErrorDetails = false
